<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".AddEstateObjectActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_header_edit_adress"
        style="@style/TextHeader"
        android:text="@string/new_object"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_add_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_add_adress"
            style="@style/TextEdit"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            android:hint="@string/adress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_add_floor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_add_floor"
            style="@style/TextEdit"
            android:inputType="date"
            android:imeOptions="actionNext"
            android:hint="@string/floor_add" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_add_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_add_area"
            style="@style/TextEdit"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:hint="@string/area_add" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_add_rooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_add_rooms"
            style="@style/TextEdit"
            android:inputType="numberSigned"
            android:imeOptions="actionNext"
            android:hint="@string/rooms_add" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_add_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_add_cost"
            style="@style/TextEdit"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:hint="@string/cost_add" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="3dp">

        <ImageView
            android:id="@+id/add_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@mipmap/bacground_img_add"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_add_fragment"
            style="@style/Button"
            android:text="@string/add"/>

        <Button
            android:id="@+id/btn_cancel_add"
            style="@style/Button"
            android:text="@string/close_add"/>

    </LinearLayout>
</LinearLayout>

</ScrollView>