<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/img_estate_item_menu"
        android:layout_width="match_parent"
        android:background="@mipmap/bacground_img_gray"
        android:layout_height="150dp"/>

    <TextView
        android:id="@+id/txt_adress_estate_item_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="2dp"
        android:textSize="14sp"
        android:text="@string/adress"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp">

    <TextView
        android:id="@+id/txt_cost_estate_item_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/cost"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/txt_cost_estate_item_menu"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:textSize="14sp"
        android:text="@string/ye"
        android:layout_toRightOf="@+id/txt_cost_estate_item_menu" />

    <TextView
        android:id="@+id/txt_area_estate_item_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/txt_m2"
        android:layout_toLeftOf="@+id/txt_m2"
        android:textSize="14sp"
        android:text="@string/area"/>

    <TextView
        android:id="@+id/txt_m2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:textSize="14sp"
        android:text="@string/m2"
        android:layout_alignParentRight="true" />

    </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>