<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context=".fragments.ViewEstateFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/txt_header_main"
            style="@style/TextHeader"
            android:text="@string/header"/>


        <ImageButton
            android:id="@+id/img_btn_edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_edit" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>



        <ImageView
            android:id="@+id/img_estate_view"
            android:layout_width="match_parent"
            android:background="@mipmap/bacground_img_gray"
            android:layout_marginTop="3dp"
            android:layout_height="200dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="5dp">

            <TextView
                android:id="@+id/txt_cost_estate_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/cost"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_toEndOf="@+id/txt_cost_estate_view"
                android:layout_toRightOf="@+id/txt_cost_estate_view"
                android:text="@string/ye"
                android:textSize="16sp" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txt_cost_estate_view"
                android:layout_margin="1dp"
                android:background="@color/light_grey" />

            <TextView
                android:id="@+id/txt_prise_estate_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view2"
                android:text="@string/prise"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_rub_m2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view2"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_toEndOf="@+id/txt_prise_estate_view"
                android:layout_toRightOf="@+id/txt_prise_estate_view"
                android:text="@string/rubm2"
                android:textSize="15sp" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="@color/light_grey"
                android:layout_below="@id/txt_prise_estate_view"/>

            <LinearLayout
                android:id="@+id/l_descriptuon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/view3">


                <TextView
                    android:id="@+id/txt_rooms_estate_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rooms"
                    android:textSize="15sp" />


            <TextView
                android:id="@+id/txt_m2_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:text="@string/m2"
                android:textSize="15sp"/>

                <TextView
                    android:id="@+id/txt_floor_estate_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floor"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="@color/light_grey"
                android:layout_below="@id/l_descriptuon"/>

            <TextView
                android:id="@+id/txt_adress_estate_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view4"
                android:text="@string/adress"
                android:textSize="17sp" />

        </RelativeLayout>

</LinearLayout>