<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/bordeaux"
        android:text="@string/header"/>


    <EditText
        android:id="@+id/editeText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_name"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:selectAllOnFocus="true"/>


    <EditText
        android:id="@+id/editeText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editeText_email"
        android:layout_centerVertical="true"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:nextFocusDown="@id/btn_enter"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btn_enter"
        style="@style/Button"
        android:layout_below="@id/editeText_password"
        android:layout_centerHorizontal="true"
        android:text="@string/authentication_enter" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>